[package]
name = "feather-ast"
version = "0.0.1"
edition = "2021"
license = "LGPL-3.0-only"

[lib]
name = "featherast"
crate-type = ["rlib"]

[dependencies]
feather-lrgen = { path = "../feather-lrgen" }
feather-parse = { path = "../feather-parse" }
indexmap = "2.2"
itertools = "0.12"
serde_json = "1.0"
serde = { version = "1.0.196", features = ["derive"] }
lazy_static = "1.4.0"

[build-dependencies]
feather-parse = { path = "../feather-parse" }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0"
