[package]
name = "feather-ast"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "featherast"
crate-type = ["rlib"]

[dependencies]
feather-lrgen = { path = "../feather-lrgen" }
feather-parse = { path = "../feather-parse" }
indexmap = "2.2"
itertools = "0.12"
lazy_static = "1.4.0"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0"
strum = "0.26"
strum_macros = "0.26"

[build-dependencies]
feather-parse = { path = "../feather-parse" }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0"
