[package]
name = "feather-parse"
version = "0.0.1"
edition = "2021"
license = "LGPL-3.0-only"

[lib]
name = "featherparse"
crate-type = ["rlib"]

[dependencies]
indexmap = "2.2"
itertools = "0.12"
lazy_static = "1.4"
regex = { version = "1.10", feature = ["unicode", "unicode-bool"] }
serde_json = "1.0"
serde = { version = "1.0.196", features = ["derive"] }
