[package]
name = "feather-parse"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "featherparse"
crate-type = ["rlib"]

[dependencies]
indexmap = "2.2"
itertools = "0.12"
lazy_static = "1.4"
regex = "1.10"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0"
